-------------------------------
 NEWS for R Package "vegclust"
-------------------------------

__Version history__

_Version 1.7.5, August 2018
1. Now trajectory angles are measured between the direction of the first segment and the direction of the second segment.
2. Now mean and sd of trajectory angles are calculated using functions of package 'circular'
3. Parameter 'add' added to community trajectory analysis to deactivate constant addition in triplets violating the triangle inequality.

_Version 1.7.4, May 2018
1. Improvement of parameter checking in function 'stratifyvegdata'
2. Documentation of avoca data set
3. New function 'trajectoryPlot'

_Version 1.7.3, April 2018
1. New function 'trajectoryConvergence'
2. New function 'trajectoryDirectionality'
3. New function 'centerTrajectories'

_Version 1.7.2, April 2018

1. New function 'trajectoryAngles'.
2. New function 'trajectoryProjection'.
3. New vignette for trajectory analysis.

_Version 1.7.1, September 2017

1. Package encoding. Changed package and author description.

_Version 1.7.0, September 2017.

1. NEW feature: Trajectory analysis. Functions 'trajectoryDistances', 'trajectoryLengths' and 'trajectoryPCoA.
2. Added option to 'trajectoryDistances' to allow different symmetrization functions (e.g. min) in addition to 'mean'