@@ -3,7 +3,8 @@ importFrom("grDevices", "colorRampPalette", "rainbow")
 importFrom("graphics", "abline", "axis", "legend", "lines", "matlines",
              "persp", "arrows")
 importFrom("vegan", "decostand")
-importFrom("stats", "as.dist", "cutree", "dist", "quantile", "var", "cmdscale", "sd")
+importFrom("MASS", "ginv")
+importFrom("stats", "as.dist", "cutree", "dist", "quantile", "model.matrix", "var", "cmdscale", "sd")
 importFrom("utils", "setTxtProgressBar", "txtProgressBar", "combn")
 importFrom("Kendall", "MannKendall")
 importFrom("circular", "circular", "mean.circular", "sd.circular", "rho.circular")
